welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:19: error: '=' expected but identifier found.
  def couleurMotif(i:Int) Color= {
                          ^MethodsPicture:28: error: illegal start of simple expression
  def faireMotif() {
^